2001-10-12  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Make OAF file creation generic

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove support for disabling bonobo-conf build

	* Makefile.am: Change the binary name to
	mouse-properties-control and create a wrapper script from
	../common/wrapper-script.in to be named mouse-properties-capplet

2001-07-31  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): add DISTDIR to install-data-local

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-25  Chema Celorio  <chema@celorio.com>

	* Makefile.am: remove the OAF_FILE_IN_RULE and copy it here
	* Makefile.am: remove the DESKTOP_IN_RULE and copy the sed here

2001-07-25  Bradford Hovinen  <hovinen@ximian.com>

	* prefs-widget.c (prefs_widget_init): Fix macro name

	* main.c (main): Fix macro name

2001-07-24  Richard Hestilow  <hestilow@ximian.com>
	
	* sound-properties-capplet.c (main): Pass in legacy files to
	capplet_init.
	(get_legacy_settings): Use the "Main" config prefix.

2001-07-23  Bradford Hovinen  <hovinen@ximian.com>

	* sound-properties-capplet.c (apply_settings): Make sure ESD gets
	killed if it's supposed to

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove SUBDIRS
	Remove extraneous EXTRA_DIST
	Make sure to include defaults and OAF info files

2001-07-18  Bradford Hovinen  <hovinen@ximian.com>

	* Bonobo_Control_Capplet_sound_properties.oaf: Update for new
	binary name

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* sound-properties-capplet.c (create_dialog): Revert that. 

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* sound-properties-capplet.c (create_dialog): Change to reflect
	new prototype.

2001-07-17  Chema Celorio  <chema@celorio.com>

	* Makefile.am (SUBDIRS): clean

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>
