@@ -24,47 +24,97 @@
   <auto_shrink>False</auto_shrink>
 
   <widget>
-    <class>GtkVBox</class>
+    <class>GtkNotebook</class>
     <name>prefs_widget</name>
-    <homogeneous>False</homogeneous>
-    <spacing>5</spacing>
+    <can_focus>True</can_focus>
+    <show_tabs>True</show_tabs>
+    <show_border>True</show_border>
+    <tab_pos>GTK_POS_TOP</tab_pos>
+    <scrollable>False</scrollable>
+    <tab_hborder>2</tab_hborder>
+    <tab_vborder>2</tab_vborder>
+    <popup_enable>False</popup_enable>
 
     <widget>
-      <class>GtkCheckButton</class>
-      <name>enable_toggle</name>
-      <can_focus>True</can_focus>
-      <signal>
-	<name>toggled</name>
-	<handler>enable_toggled_cb</handler>
-	<last_modification_time>Sun, 08 Oct 2000 01:49:56 GMT</last_modification_time>
-      </signal>
-      <label>Enable sound server startup</label>
-      <active>False</active>
-      <draw_indicator>True</draw_indicator>
-      <child>
-	<padding>0</padding>
-	<expand>False</expand>
-	<fill>False</fill>
-      </child>
+      <class>GtkVBox</class>
+      <name>vbox1</name>
+      <homogeneous>False</homogeneous>
+      <spacing>5</spacing>
+
+      <widget>
+	<class>GtkCheckButton</class>
+	<name>enable_toggle</name>
+	<can_focus>True</can_focus>
+	<signal>
+	  <name>toggled</name>
+	  <handler>enable_toggled_cb</handler>
+	  <last_modification_time>Sun, 08 Oct 2000 01:49:56 GMT</last_modification_time>
+	</signal>
+	<label>Enable sound server startup</label>
+	<active>False</active>
+	<draw_indicator>True</draw_indicator>
+	<child>
+	  <padding>0</padding>
+	  <expand>False</expand>
+	  <fill>False</fill>
+	</child>
+      </widget>
+
+      <widget>
+	<class>GtkCheckButton</class>
+	<name>events_toggle</name>
+	<can_focus>True</can_focus>
+	<signal>
+	  <name>toggled</name>
+	  <handler>events_toggled_cb</handler>
+	  <last_modification_time>Sun, 08 Oct 2000 01:50:13 GMT</last_modification_time>
+	</signal>
+	<label>Sounds for events</label>
+	<active>False</active>
+	<draw_indicator>True</draw_indicator>
+	<child>
+	  <padding>0</padding>
+	  <expand>False</expand>
+	  <fill>False</fill>
+	</child>
+      </widget>
     </widget>
 
     <widget>
-      <class>GtkCheckButton</class>
-      <name>events_toggle</name>
-      <can_focus>True</can_focus>
-      <signal>
-	<name>toggled</name>
-	<handler>events_toggled_cb</handler>
-	<last_modification_time>Sun, 08 Oct 2000 01:50:13 GMT</last_modification_time>
-      </signal>
-      <label>Sounds for events</label>
-      <active>False</active>
-      <draw_indicator>True</draw_indicator>
-      <child>
-	<padding>0</padding>
-	<expand>False</expand>
-	<fill>False</fill>
-      </child>
+      <class>GtkLabel</class>
+      <child_name>Notebook:tab</child_name>
+      <name>label1</name>
+      <label>General</label>
+      <justify>GTK_JUSTIFY_CENTER</justify>
+      <wrap>False</wrap>
+      <xalign>0.5</xalign>
+      <yalign>0.5</yalign>
+      <xpad>0</xpad>
+      <ypad>0</ypad>
+    </widget>
+
+    <widget>
+      <class>GtkVBox</class>
+      <name>events_vbox</name>
+      <homogeneous>False</homogeneous>
+      <spacing>0</spacing>
+
+      <widget>
+	<class>Placeholder</class>
+      </widget>
+    </widget>
+
+    <widget>
+      <class>GtkLabel</class>
+      <child_name>Notebook:tab</child_name>
+      <name>label2</name>
+      <label>Sound Events</label>
+      <justify>GTK_JUSTIFY_CENTER</justify>
+      <wrap>False</wrap>
+      <xalign>0.5</xalign>
+      <yalign>0.5</yalign>
+      <xpad>0</xpad>
+      <ypad>0</ypad>
     </widget>
   </widget>
 </widget>
